fix horizontal overflow caused by headings

--- a/src/_sass/structure.scss
+++ b/src/_sass/structure.scss
@@ -86,9 +86,10 @@ a {
 	font-weight: bold;
 	line-height: 1;
 	margin: 0;
+  max-width: 90vw;
 
 	@include respond(phone) {
-		font-size: 10rem;
+		font-size: 5rem;
 	}
 
 	&--speakers {
